--- a/src/components/BackgroundForm1.astro
+++ b/src/components/BackgroundForm1.astro
@@ -14,6 +14,7 @@ const HTMLTag = as || "div";
 <HTMLTag
   role="presentation"
   class:list={[
+    "bg-form",
     "w-[600px]",
     "h-[303px]",
     "2xl:w-[1159px]",
