--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import CallToAction from "./@common/CallToAction.astro";
 import NavItem from "./Header/components/NavItem.astro";
 ---
 
-<footer class="container mb-[60px] 2xl:mb-[70px]">
+<footer id="footer" class="container mb-[60px] 2xl:mb-[70px]">
   <Grid as="nav" class="gap-y-5">
     <div class="col-span-full 2xl:col-start-2 2xl:col-span-2 mb-2.5 2xl:mb-0">
       <CallToAction
