--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -86,6 +86,8 @@ const { block1, block2 } = data;
             </h3>
             <ul class="certifications">
               <li>
+                <span class="hidden print:inline">Access 42</span>
+
                 <Image
                   srcSet={["/images/access42.png"]}
                   width="80"
@@ -94,6 +96,10 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline"
+                  >Interaction Design Foundation</span
+                >
+
                 <Image
                   srcSet={[
                     "/images/certifications/IDF.png",
@@ -107,6 +113,8 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline">W3C</span>
+
                 <Image
                   srcSet={["/images/w3c.png"]}
                   width={90}
@@ -115,6 +123,8 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline">Opquast</span>
+
                 <Image
                   srcSet={["/images/opquast.png"]}
                   width={140}
@@ -123,6 +133,8 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline">UXer</span>
+
                 <Image
                   srcSet={["/images/uxer.png"]}
                   width={46}
@@ -131,6 +143,8 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline">SHIFTA by Elisava</span>
+
                 <Image
                   srcSet={["/images/shifta.png"]}
                   width={106}
@@ -139,6 +153,10 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline"
+                  >Institut du Numérique Responsable</span
+                >
+
                 <Image
                   srcSet={["/images/INR.png"]}
                   width={120}
@@ -156,6 +174,8 @@ const { block1, block2 } = data;
             </h3>
             <ul class="flex items-center max-lg:justify-around gap-[44px]">
               <li>
+                <span class="hidden print:inline">Desino Etico</span>
+
                 <Image
                   srcSet={["/images/diseno-etico.png"]}
                   width="90"
@@ -164,6 +184,8 @@ const { block1, block2 } = data;
                 />
               </li>
               <li>
+                <span class="hidden print:inline">Designers Éthiques</span>
+
                 <Image
                   srcSet={["/images/designers-ethiques.png"]}
                   width="105"
