--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -1,5 +1,6 @@
 ---
 import data from "../../../data/glossaire-design-ux/data.yaml";
+import { slugify } from "../../../scripts/helpers/slugify";
 import Grid from "../../@common/Grid.astro";
 import Icon from "../../@common/Icon.astro";
 import Letter from "./Letter.astro";
@@ -53,14 +54,7 @@ for (const definition of data) {
   letterGroup.add({
     term: definition.term,
     alternative: definition.alternative,
-    slug: definition.term
-      .toLowerCase()
-      .trim()
-      .normalize("NFD")
-      .replace(/[\u0300-\u036f]/g, "")
-      .replace(/[^a-z0-9\s-]/g, " ")
-      .trim()
-      .replace(/[\s-]+/g, "-"),
+    slug: slugify(definition.term),
     content: definition.content,
   });
 }
