--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -1,4 +1,5 @@
 ---
+import { slugify } from "../../scripts/helpers/slugify";
 import NavItem from "./components/NavItem.astro";
 import Icon from "../@common/Icon.astro";
 
@@ -11,13 +12,14 @@ interface Props {
 }
 
 const { title, items } = Astro.props;
+const ariaControlsValue = `controls-${slugify(title)}`;
 ---
 
-<NavItem>
+<NavItem ariaControlsValue={ariaControlsValue}>
   {title}
   <Icon name="arrow_drop_down" width={20} height={20} />
 
-  <div class="submenu-container" slot="submenu">
+  <div id={ariaControlsValue} class="submenu-container" slot="submenu">
     <ul>
       {
         items.map((item) => {
