footer glossaire name

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ import NavItem from "./Header/components/NavItem.astro";
     <div class="col-span-full 2xl:col-span-2">
       <ul class="flex flex-col gap-6 2xl:gap-4">
         <li>
-          <NavItem to="/glossaire-ux-design">Glossaire UX</NavItem>
+          <NavItem to="/glossaire-ux-design">Glossaire de l’UX design</NavItem>
         </li>
         <li>
           <NavItem to="/demarche-eco-conception">
