--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -94,7 +94,7 @@ const isSelected = items.some(
 
       submenu.removeEventListener("mouseleave", onMouseLeavesSubmenu);
 
-      timer = setTimeout(closeSubmenu, 3000);
+      // timer = setTimeout(closeSubmenu, 3000);
     }
 
     function onUserClicksOutside(event: MouseEvent) {
