--- a/src/components/Header/components/NavItem.astro
+++ b/src/components/Header/components/NavItem.astro
@@ -51,6 +51,19 @@ const selected =
       text-decoration: underline;
       text-underline-offset: 10px;
     }
+
+    &:after {
+      @apply bg-primary;
+
+      content: "";
+      position: absolute;
+      left: -1px;
+      right: -1px;
+      bottom: -4px;
+      height: 2px;
+      border-radius: 2px;
+      opacity: 0;
+    }
   }
 
   @screen lg {
@@ -63,20 +76,12 @@ const selected =
       &:hover {
         text-decoration: none;
 
-        &:after {
-          @apply bg-primary;
-
-          content: "";
-          position: absolute;
-          left: -1px;
-          right: -1px;
-          bottom: -4px;
-          height: 2px;
-          border-radius: 2px;
-        }
-
         .title {
           @apply text-primary;
+        }
+
+        &:after {
+          opacity: 1;
         }
       }
     }
