contact email hover

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -58,7 +58,7 @@ const backgroundFormCSSClasses = showBackgroundForm
           >
             Contactez-nous à l’adresse
             <CallToAction
-              class="underline !text-inherit !underline-offset-[10px]"
+              class="underline !text-inherit !underline-offset-[10px] hover:!text-primary"
               variant="transparent"
               type="secondary"
               href="mailto:hello@team-ux.com"
