--- a/src/components/Toast.astro
+++ b/src/components/Toast.astro
@@ -4,6 +4,8 @@ import Icon from "./@common/Icon.astro";
 
 <div
   id="toast"
+  role="alert"
+  aria-live="assertive"
   class="fixed flex items-center top-[100%] left-1/2 gap-2 px-8 py-4 text-body-medium rounded-md bg-surface6 shadow-[0_2px_4px_0_rgba(8,18,79,0.25)]"
 >
   <Icon name="check_circle" width={24} height={24} />
