--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,6 +56,12 @@ const { title, description } = Astro.props;
         @apply bg-surface1 text-secondary;
       }
 
+      @media (prefers-reduced-motion: no-preference) {
+        html {
+          scroll-behavior: smooth;
+        }
+      }
+
       details {
         & summary {
           list-style: none;
