derriere team ux: title margin

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -27,7 +27,7 @@ const { block1, block2 } = data;
         <div
           class="col-span-full lg:col-start-2 lg:col-span-5 flex flex-col gap-8 p-5 lg:p-10 bg-surface6 rounded-[26px]"
         >
-          <h3 class="mb-5 2xl:mb-8 text-headline-medium-bold">
+          <h3 class="text-headline-medium-bold">
             {block1.title}
           </h3>
 
