derriere team ux: img alt

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -92,7 +92,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/access42.png"]}
                   width="80"
                   height="58"
-                  alt="Logo du cabinet de conseil français expert en accessibilité numérique Access42"
+                  alt="Access42"
                 />
               </li>
               <li>
@@ -109,7 +109,7 @@ const { block1, block2 } = data;
                   alt=""
                   width={170}
                   height={56}
-                  alt="Logo du site de formation Interaction Design Foundation"
+                  alt="Interaction Design Foundation"
                 />
               </li>
               <li>
@@ -119,7 +119,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/w3c.png"]}
                   width={90}
                   height={46}
-                  alt="Logo du W3C"
+                  alt="W3C"
                 />
               </li>
               <li>
@@ -129,7 +129,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/opquast.png"]}
                   width={140}
                   height={36}
-                  alt="Logo de l'organisme de certification Opquast"
+                  alt="Opquast"
                 />
               </li>
               <li>
@@ -139,7 +139,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/uxer.png"]}
                   width={46}
                   height={47}
-                  alt="Logo de l'agence digitale UXER"
+                  alt="UXER"
                 />
               </li>
               <li>
@@ -149,7 +149,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/shifta.png"]}
                   width={106}
                   height={40}
-                  alt="Logo de l'université SHIFTA"
+                  alt="Shifta by ELISAVA"
                 />
               </li>
               <li>
@@ -161,7 +161,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/INR.png"]}
                   width={120}
                   height={44}
-                  alt="Logo de l'institut du numérique responsable"
+                  alt="Institut du Numérique Responsable"
                 />
               </li>
             </ul>
@@ -180,7 +180,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/diseno-etico.png"]}
                   width="90"
                   height="49"
-                  alt="Logo de l'association Desino Etico"
+                  alt="Desino Etico"
                 />
               </li>
               <li>
@@ -190,7 +190,7 @@ const { block1, block2 } = data;
                   srcSet={["/images/designers-ethiques.png"]}
                   width="105"
                   height="49"
-                  alt="Logo de l'association Designers Éthiques"
+                  alt="Designers Éthiques"
                 />
               </li>
             </ul>
