duo de choc: no alt

--- a/src/components/images/Daniela.astro
+++ b/src/components/images/Daniela.astro
@@ -10,7 +10,7 @@ const { width, height, class: cssClasses } = Astro.props;
     "/images/daniela.avif",
     "/images/daniela.webp",
   ]}
-  alt="Daniela Peñaranda"
+  alt=""
   width={width}
   height={height}
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
