--- a/src/components/images/Yuna.astro
+++ b/src/components/images/Yuna.astro
@@ -6,8 +6,8 @@ const { width, height, class: cssClasses } = Astro.props;
 
 <Image
   srcSet={["/images/yuna.png", "/images/yuna.avif", "/images/yuna.webp"]}
-  alt="Yuna Orsini"
   width={width}
   height={height}
+  alt=""
   class:list={["rounded-t-full", "rounded-b-full", cssClasses]}
 />
