derriere team ux: img alt

--- a/src/components/pages/homepage/DerriereTeamUX/index.astro
+++ b/src/components/pages/homepage/DerriereTeamUX/index.astro
@@ -54,10 +54,12 @@ const { block1, block2 } = data;
           <h3 class="text-headline-medium-bold">{block2.title}</h3>
           <div class="relative w-[200px] 2xl:w-auto mx-auto 2xl:mx-0">
             <Brush
+              alt=""
               id="1"
               class="w-[133px] h-[160px] 2xl:w-[173px] 2xl:h-[206px]"
             />
             <Brush
+              alt=""
               id="4"
               class="absolute top-0 left-[41px] 2xl:left-[52px] w-[160px] h-[160px] 2xl:w-[207px] 2xl:h-[206px]"
             />
