--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -21,14 +21,14 @@ const { viewMode = "block", testimonial } = Astro.props;
         lang={testimonial.contentLang ?? undefined}
         class="text-body-medium 2xl:mt-[50px] mb-auto"
       >
-        <span class="block mb-10 2xl:mb-[50px] text-primary text-[200px] 2xl:text-[240px] translate-x-[-12px] translate-y-[56px] 2xl:translate-x-[-15px] 2xl:translate-y-[20px]">
+        <span class="block mb-10 2xl:mb-[40px] text-primary text-[200px] 2xl:text-[240px] translate-x-[-12px] translate-y-[56px] 2xl:translate-x-[-15px] 2xl:translate-y-[20px]">
           &ldquo;
         </span>
         {testimonial.content}&rdquo;
       </p>
       <footer class="2xl:mt-10 text-body-medium-bold">
         {testimonial.author}
-        <cite>
+        <cite class="not-italic">
           <span class="text-primary">&nbsp;{testimonial.company}</span>
         </cite>
       </footer>
