--- a/src/components/@common/Icon.astro
+++ b/src/components/@common/Icon.astro
@@ -14,7 +14,8 @@ export interface Props {
     | "open_in_new"
     | "quote"
     | "visibility"
-    | "chevron_right_breadcrumb";
+    | "chevron_right_breadcrumb"
+    | "arrow_up";
   width: number;
   height: number;
 }
