--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -17,7 +17,7 @@ const urlPageTitles = new Map([
 ]);
 ---
 
-<nav aria-label="Breadcrumb" class="container">
+<nav id="breadcrumb" aria-label="Breadcrumb" class="container">
   <Grid>
     <ul class="col-span-full text-label-small">
       <li>
