--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -164,9 +164,9 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                                   type="secondary"
                                   textToCopy={`${currentPath}#${definition.slug}`}
                                   toastCopySuccessText="L’URL a été copiée dans votre presse-papiers !"
+                                  class="text-left"
                                 >
-                                  Copier notre adresse email dans votre
-                                  presse-papiers
+                                  Copier l’URL directe vers ce mot
                                 </ButtonCopyText>
                               </div>
                             </details>
