--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -5,6 +5,7 @@ import Contact from "../../components/Contact.astro";
 import AllProjects from "../../components/pages/projets/AllProjects/index.astro";
 import Hero from "../../components/pages/projets/Hero.astro";
 import Footer from "../../components/Footer.astro";
+import ScrollToTop from "../../components/ScrollToTop/index.astro";
 ---
 
 <Layout
@@ -28,4 +29,6 @@ import Footer from "../../components/Footer.astro";
   </div>
 
   <Footer />
+
+  <ScrollToTop />
 </Layout>
