--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -5,6 +5,7 @@ import Contact from "../../components/Contact.astro";
 import Footer from "../../components/Footer.astro";
 import Hero from "../../components/pages/glossaire-ux-design/Hero.astro";
 import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astro";
+import ScrollToTop from "../../components/ScrollToTop/index.astro";
 ---
 
 <Layout
@@ -28,4 +29,6 @@ import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astr
   </div>
 
   <Footer />
+
+  <ScrollToTop />
 </Layout>
