--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -73,7 +73,7 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                 />
                 <Icon name="softskill-sincerity" />
                 <span class="text-label-medium 2xl:text-label-large"
-                  >Sincerité</span
+                  >Sincérité</span
                 >
               </li>
               <li>
