--- a/src/components/TeamUXStamp.astro
+++ b/src/components/TeamUXStamp.astro
@@ -1,3 +1,14 @@
+---
+import Image from "./@common/Image.astro";
+---
+
+<Image
+  srcSet={["/images/stamp.png", "/images/stamp.avif", "/images/stamp.webp"]}
+  width={200}
+  height={200}
+/>
+
+<!-- why u not working :(
 <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
   <defs>
     <path
@@ -29,3 +40,4 @@
     @apply fill-primary;
   }
 </style>
+-->
