--- a/src/components/pages/notre-manifeste/Signatures.astro
+++ b/src/components/pages/notre-manifeste/Signatures.astro
@@ -4,7 +4,7 @@ import Image from "../../@common/Image.astro";
 ---
 
 <section class="container">
-  <div class="flex justify-center mb-[50px] 2x:mb-0">
+  <div class="flex justify-center mb-[50px] 2xl:mb-0">
     <TeamUXStamp />
   </div>
   <div
