--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -7,7 +7,7 @@ import Hero from "../../components/pages/notre-manifeste/Hero.astro";
 import Introduction from "../../components/pages/notre-manifeste/Introduction.astro";
 import Convictions from "../../components/pages/notre-manifeste/Convictions.astro";
 import Actions from "../../components/pages/notre-manifeste/Actions.astro";
-import Signature from "../../components/pages/notre-manifeste/Signature.astro";
+import Signatures from "../../components/pages/notre-manifeste/Signatures.astro";
 ---
 
 <Layout
@@ -35,7 +35,7 @@ import Signature from "../../components/pages/notre-manifeste/Signature.astro";
   </div>
 
   <div class="mb-[150px] 2xl:mb-[160px]">
-    <Signature />
+    <Signatures />
   </div>
 
   <div class="mb-[150px] 2xl:mb-[170px]">
