--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -8,7 +8,7 @@ const currentPath = pathname.replaceAll("/", "");
 
 const urlPageTitles = new Map([
   ["projets", "Projets"],
-  ["nos-deux-profils", "Nos deux profils"],
+  ["nos-deux-profils", "Nos 2 profils"],
   ["notre-manifeste", "Notre manifeste"],
   ["temoignages", "Témoignages"],
   ["mentions-legales", "Mentions légales"],
