--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -24,6 +24,7 @@ import Profile from "./Profile.astro";
             width={82}
             height={204}
             class="ml-6 2xl:w-[89px] 2xl:h-[220px]"
+            alt="Portrait de Yuna Orsini"
           />
         </div>
       </Profile>
@@ -42,6 +43,7 @@ import Profile from "./Profile.astro";
             width={82}
             height={204}
             class="ml-6 2xl:w-[89px] 2xl:h-[220px]"
+            alt="Portrait de Daniela Peñaranda"
           />
         </div>
       </Profile>
