--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 
 <Layout
   title="Team UX ▷ 2 designers UX en freelance à Bordeaux"
-  decription="Nous sommes Yuna & Daniela, un binôme de designers UX seniors. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
+  decription="Nous sommes Yuna & Daniela, l'extension UX de votre équipe produit. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
 >
   <div class="mt-[60px] 2xl:mt-[129px] mb-[150px] 2xl:mb-[85px]">
     <Hero />
